tests/fail/semantics/llvm_runtime_origin_array_resize_policy/main.kira
@Runtime
function makeValues() -> [Int] {
    return [1, 2]
}

@Native
function nativeResize(values: [Int]) {
    values.resize(4)
    return
}

@Main
@Runtime
function main() {
    let values = makeValues()
    nativeResize(values)
    return
}
